--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -13,4 +13,11 @@ ja:
     hints:
     placeholders:
     labels:
+      item:
+        name: 商品名
+        image: 商品画像
+        price: 価格
+        description: 商品説明
+        display_flag: 表示フラグ
+        sort_no: 表示順
 
