--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -150,6 +150,8 @@ ja:
       show: '表示'
       edit: '編集'
       destroy: '削除'
+      login: 'ログイン'
+      logout: 'ログアウト'
     submit:
       create: '登録する'
       submit: '保存する'
