--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -41,6 +41,9 @@ ja:
       updated: 'アカウント情報を変更しました。'
       update_needs_confirmation: "アカウント情報を変更しましたが、Eメールアドレスの本人確認用Eメールをお送りしましたので、中のリンクをクリックして証明してください。"
     sessions:
+      new:
+        title: 'ログイン'
+        submit_button: 'ログイン'
       signed_in: 'ログインしました。'
       signed_out: 'ログアウトしました。'
     unlocks:
