業者用の商品デザインを管理者用に合わせるように修正。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -256,7 +256,7 @@ ja:
         image: '商品画像'
         price: '価格'
         description: '商品説明'
-        display_flag: '表示フラグ'
+        display_flag: '表示するか'
         sort_no: '表示順'
         stock: '在庫'
       user:
@@ -307,6 +307,8 @@ ja:
     provide: 'さくらマーケット(業者)'
   admin:
     coupons:
+      index:
+        coupon_log: '利用履歴があるか'
       show:
         coupon_log: '利用履歴'
         nolog_message: '利用履歴はありません。'
