--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -19,7 +19,7 @@ ja:
         image: '商品画像'
         price: '価格'
         description: '商品説明'
-        display_flag: '表示フラグ'
+        display_flag: '表示するか'
         sort_no: '表示順'
         stock: '在庫'
       user:
