日記、コメントを作成できる機能を追加。

--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -58,4 +58,10 @@ ja:
       coupon:
         code: 'クーポンコード'
         point: 'ポイント'
+      diary:
+        title: 'タイトル'
+        contents: '本文' 
+        image: '画像'
+      comment:
+        contents: 'コメント'
 
