--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -250,6 +250,8 @@ ja:
       provide_user: '業者アカウント'
       coupon: 'クーポン'
       coupon_log: 'クーポン利用履歴'
+      diary: '日記'
+      comment: 'コメント'
     attributes:
       item:
         name: '商品名'
@@ -289,6 +291,12 @@ ja:
       coupon_log:
         user_id: 'クーポン利用者'
         used_datetime: 'クーポン利用日'
+      diary:
+        title: 'タイトル'
+        contents: '本文' 
+        image: '画像'
+      comment:
+        contents: 'コメント'
     errors:
       <<: *errors
   views:
@@ -328,4 +336,7 @@ ja:
       item_rest: "( 残り: %{stock} )"
       show_detail_button: '商品詳細へ'
       add_cart_button: 'カートに入れる'
-
+  diaries:
+    index:
+      good_button: 'Good!'
+      comment_button: 'コメントを書く'
