--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -381,6 +381,7 @@ ja:
   user_actions:
     change_registation: 'ユーザ情報を変更する'
     change_destination: '配送先情報を変更する'
+    user_point: 'ポイントを追加する'
     user_point_log: 'ポイント履歴を見る'
     order: '購入履歴を見る'
   items:
@@ -398,6 +399,10 @@ ja:
     index:
       comment_button: 'コメントを書く'
       size: '(%{size})'
+  coupons:
+    update:
+      coupon_use_success: 'クーポンからポイントを付与しました。'
+      coupon_not_available: '指定のクーポンは利用出来ません。'
   diary_notifier:
     add_comment:
       subject: 'あなたの日記にコメントがつきました'
